Create Home Page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StartupBridge</title>
     <link rel="icon" href="./images/title.svg">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
+
 <body>
-    
+    <nav class="navbar">
+        <div class="logo">
+            <a href="./index.html">
+                <img src="./images/title.svg" alt="StartupBridge Logo">
+            </a>
+            <span><a href="">StartupBridge</a></span>
+        </div>
+        <ul class="nav-links">
+            <li><a href="./index.html"><i class="bi bi-house-fill"></i> Home</a></li>
+            <li><a href="#about"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
+            <li><a href="#contact"><i class="bi bi-envelope-fill"></i> Contact</a></li>
+        </ul>
+    </nav>
+    <header class="header">
+        <h1>Welcome to Startup Bridge</h1>
+        <p>- Connecting Investors to Startups for Brighter Future -</p>
+        <div class="links">
+            <a href="#startup" class="btn">Join as Startup</a>
+            <a href="#admin" class="btn">Admin</a>
+            <a href="#investor" class="btn">Join as Investor</a>
+        </div>
+    </header>
+    <section class="why-us">
+        <div class="grid">
+            <div class="grid-item">
+                <img src="./images/bulb.svg" alt="Innovative">
+                <h3>Innovative Platform</h3>
+                <p>Our platform connects startups and investors seamlessly, offering a robust and secure environment for
+                    growth.</p>
+            </div>
+            <div class="grid-item">
+                <img src="./images/handshake.svg" alt="Trusted">
+                <h3>Trusted Partnerships</h3>
+                <p>We foster trusted relationships between startups and investors, ensuring mutual benefit and success.
+                </p>
+            </div>
+            <div class="grid-item">
+                <img src="./images/guidance.svg" alt="Guidance">
+                <h3>Expert Guidance</h3>
+                <p>Gain access to expert advice and resources to help you navigate the startup ecosystem effectively.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <p>&copy; 2024 Startup Bridge. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
