Create Contact and About us Page

--- a/index.html
+++ b/index.html
@@ -25,39 +25,36 @@
         </div>
         <ul class="nav-links">
             <li><a href="./index.html"><i class="bi bi-house-fill"></i> Home</a></li>
-            <li><a href="#about"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
-            <li><a href="#contact"><i class="bi bi-envelope-fill"></i> Contact</a></li>
+            <li><a href="./about_us.html"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
+            <li><a href="./contact.html"><i class="bi bi-envelope-fill"></i> Contact</a></li>
         </ul>
     </nav>
+
     <header class="header">
         <h1>Welcome to Startup Bridge</h1>
         <p>- Connecting Investors to Startups for Brighter Future -</p>
-        <div class="links">
-            <a href="#startup" class="btn">Join as Startup</a>
-            <a href="#admin" class="btn">Admin</a>
-            <a href="#investor" class="btn">Join as Investor</a>
-        </div>
     </header>
+
     <section class="why-us">
         <div class="grid">
-            <div class="grid-item">
-                <img src="./images/bulb.svg" alt="Innovative">
-                <h3>Innovative Platform</h3>
-                <p>Our platform connects startups and investors seamlessly, offering a robust and secure environment for
-                    growth.</p>
-            </div>
-            <div class="grid-item">
-                <img src="./images/handshake.svg" alt="Trusted">
-                <h3>Trusted Partnerships</h3>
-                <p>We foster trusted relationships between startups and investors, ensuring mutual benefit and success.
-                </p>
-            </div>
-            <div class="grid-item">
-                <img src="./images/guidance.svg" alt="Guidance">
-                <h3>Expert Guidance</h3>
-                <p>Gain access to expert advice and resources to help you navigate the startup ecosystem effectively.
-                </p>
-            </div>
+            <a href="#startup"><div class="grid-item">
+                <img src="./images/startup.svg" alt="Startup">
+                <h3>Join as Startup</h3>
+                <p>Become a part of our innovative platform and connect with potential investors to grow your startup.</p>
+            </div></a>
+
+            <a href="#admin"><div class="grid-item">
+                <img src="./images/admin.svg" alt="Admin">
+                <h3>Admin</h3>
+                <p>Manage and oversee the platform activities to ensure a seamless experience for all users.</p>
+            </div></a>
+
+            <a href="#investor"><div class="grid-item">
+                <img src="./images/investor.svg" alt="Investor">
+                <h3>Join as Investor</h3>
+                <p>Explore promising startups and invest in the next big ideas to drive growth and innovation.</p>
+            </div></a>
+
         </div>
     </section>
     <footer class="footer">
