--- a/about_us.html
+++ b/about_us.html
@@ -25,10 +25,12 @@
         </div>
         <ul class="nav-links">
             <li><a href="./index.html"><i class="bi bi-house-fill"></i> Home</a></li>
-            <li><a href="./about.html"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
+            <li><a href="./about_us.html"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
             <li><a href="./contact.html"><i class="bi bi-envelope-fill"></i> Contact</a></li>
+            <li><a id="login" href="#" class="login-btn"><i class="bi bi-box-arrow-in-right"></i> Join</a></li>
         </ul>
     </nav>
+
     <header class="header about-header">
         <h1>About Us</h1>
         <p>- Learn more about our mission, vision, and team -</p>
