--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,13 @@
             <li><a href="./index.html"><i class="bi bi-house-fill"></i> Home</a></li>
             <li><a href="./about_us.html"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
             <li><a href="./contact.html"><i class="bi bi-envelope-fill"></i> Contact</a></li>
+            <li><a id="login" href="#" class="login-btn"><i class="bi bi-box-arrow-in-right"></i> Join</a></li>
         </ul>
     </nav>
+
     <header class="header">
         <h1>Contact Us</h1>
-        <p>Whether you have a question, feedback, or need assistance, feel free to reach out.</p>
+        <p>- Whether you have a question, feedback, or need assistance, feel free to reach out -</p>
     </header>
     <section class="contact">
         <div class="contact-container">
