--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
             <a href="./index.html">
                 <img src="./images/title.svg" alt="StartupBridge Logo">
             </a>
-            <span><a href="">StartupBridge</a></span>
+            <span><a href="./index.html">StartupBridge</a></span>
         </div>
         <ul class="nav-links">
             <li><a href="./index.html"><i class="bi bi-house-fill"></i> Home</a></li>
             <li><a href="./about_us.html"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
             <li><a href="./contact.html"><i class="bi bi-envelope-fill"></i> Contact</a></li>
+            <li><a id="login" href="./signup.html" class="login-btn"><i class="bi bi-box-arrow-in-right"></i> Join</a></li>
         </ul>
     </nav>
 
@@ -37,26 +38,27 @@
 
     <section class="why-us">
         <div class="grid">
-            <a href="#startup"><div class="grid-item">
-                <img src="./images/startup.svg" alt="Startup">
-                <h3>Join as Startup</h3>
-                <p>Become a part of our innovative platform and connect with potential investors to grow your startup.</p>
+            <a href="./signup.html"><div class="grid-item">
+                <img src="./images/bulb.svg" alt="Startup">
+                <h3>Innovative Platform</h3>
+                <p>Our platform connects startups and investors seamlessly, offering a robust and secure environment for growth.</p>
             </div></a>
 
-            <a href="#admin"><div class="grid-item">
-                <img src="./images/admin.svg" alt="Admin">
-                <h3>Admin</h3>
-                <p>Manage and oversee the platform activities to ensure a seamless experience for all users.</p>
+            <a href="./signup.html"><div class="grid-item">
+                <img src="./images/handshake.svg" alt="Admin">
+                <h3>Trusted Partnerships</h3>
+                <p>We foster trusted relationships between startups and investors, ensuring mutual benefit and success.</p>
             </div></a>
 
-            <a href="#investor"><div class="grid-item">
-                <img src="./images/investor.svg" alt="Investor">
-                <h3>Join as Investor</h3>
-                <p>Explore promising startups and invest in the next big ideas to drive growth and innovation.</p>
+            <a href="./signup.html"><div class="grid-item">
+                <img src="./images/guidance.svg" alt="Investor">
+                <h3>Expert Guidance</h3>
+                <p>Gain access to expert advice and resources to help you navigate the startup ecosystem effectively.</p>
             </div></a>
 
         </div>
     </section>
+
     <footer class="footer">
         <p>&copy; 2024 Startup Bridge. All rights reserved.</p>
     </footer>
