--- a/about_us.html
+++ b/about_us.html
@@ -39,19 +39,26 @@
         <div class="box-container">
             <div class="box">
                 <h3>Our Mission</h3>
-                <p>At StartupBridge, our mission is to connect innovative startups with forward-thinking investors to foster a thriving entrepreneurial ecosystem. We strive to create a platform that enables startups to grow and investors to find exciting opportunities.</p>
+                <p>At StartupBridge, our mission is to connect innovative startups with forward-thinking investors to
+                    foster a thriving entrepreneurial ecosystem. We strive to create a platform that enables startups to
+                    grow and investors to find exciting opportunities.</p>
             </div>
             <div class="box">
                 <h3>Our Vision</h3>
-                <p>We envision a world where startups and investors collaborate seamlessly to bring groundbreaking ideas to life. By providing a robust and secure platform, we aim to be the bridge that connects visionary entrepreneurs with the resources they need to succeed.</p>
+                <p>We envision a world where startups and investors collaborate seamlessly to bring groundbreaking ideas
+                    to life. By providing a robust and secure platform, we aim to be the bridge that connects visionary
+                    entrepreneurs with the resources they need to succeed.</p>
             </div>
             <div class="box">
                 <h3>Our Team</h3>
-                <p>Our team is composed of experienced professionals from various industries who are passionate about innovation and entrepreneurship. We are dedicated to supporting startups and investors at every step of their journey.</p>
+                <p>Our team is composed of experienced professionals from various industries who are passionate about
+                    innovation and entrepreneurship. We are dedicated to supporting startups and investors at every step
+                    of their journey.</p>
             </div>
             <div class="box">
                 <h3>Our Values</h3>
-                <p>Integrity, innovation, and collaboration are at the core of everything we do. We believe in fostering a transparent and inclusive environment that encourages creative thinking and mutual respect.</p>
+                <p>Integrity, innovation, and collaboration are at the core of everything we do. We believe in fostering
+                    a transparent and inclusive environment that encourages creative thinking and mutual respect.</p>
             </div>
         </div>
     </section>
