--- a/login.html
+++ b/login.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - StartupBridge</title>
+    <title>StartupBridge - Login</title>
     <link rel="icon" href="./images/title.svg">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
@@ -30,44 +32,32 @@
     </nav>
 
     <header class="header">
-        <h1>Contact Us</h1>
-        <p>- Whether you have a question, feedback, or need assistance, feel free to reach out -</p>
+        <h1>Login to Startup Bridge</h1>
+        <p>- Access your account and stay connected -</p>
     </header>
-    <section class="contact">
-        <div class="contact-container">
-            <form action="#" method="POST">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
 
+    <section class="login">
+        <div class="form-container">
+            <form class="login-form">
+                <h2>Login</h2>
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="6" required></textarea>
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
 
-                <button type="submit">Send Message</button>
+                <button type="submit">Login</button>
+                <div id="signup-container">
+                    <a href="./signup.html" class="signup-link">Don't have an account? Sign Up</a>
+                </div>
             </form>
-            <div class="contact-info">
-                <h3>Get in Touch</h3>
-                <p><i class="bi bi-telephone-fill"></i> +123-456-7890</p>
-                <p><i class="bi bi-envelope-fill"></i> contact@startupbridge.com</p>
-                <p><i class="bi bi-geo-alt-fill"></i> 123 Startup Lane, Innovation City, ST 12345</p>
-            </div>
         </div>
     </section>
+
     <footer class="footer">
         <p>&copy; 2024 Startup Bridge. All rights reserved.</p>
     </footer>
-<script type="text/javascript">
-    let textArea = document.getElementById('message');
-    let submitButton = document.querySelector('button[type="submit"]');
 
-    submitButton.addEventListener('click', function () {
-        if (textArea.innerHTML.length<50) {
-            alert("Message should contain atleast 50 characters.");
-        }
-    })
-</script>
 </body>
 
 </html>
