--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="./index.html"><i class="bi bi-house-fill"></i> Home</a></li>
             <li><a href="./about_us.html"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
             <li><a href="./contact.html"><i class="bi bi-envelope-fill"></i> Contact</a></li>
-            <li><a id="login" href="./signup.html" class="login-btn"><i class="bi bi-box-arrow-in-right"></i> Join</a></li>
+            <li><a id="signup" href="./signup.html" class="login-btn"><i class="bi bi-box-arrow-in-right"></i> Join</a></li>
         </ul>
     </nav>
 
@@ -37,25 +37,22 @@
     </header>
 
     <section class="why-us">
-        <div class="grid">
-            <a href="./signup.html"><div class="grid-item">
+        <div class="boxes">
+            <div class="box">
                 <img src="./images/bulb.svg" alt="Startup">
                 <h3>Innovative Platform</h3>
                 <p>Our platform connects startups and investors seamlessly, offering a robust and secure environment for growth.</p>
-            </div></a>
-
-            <a href="./signup.html"><div class="grid-item">
+            </div>
+            <div class="box">
                 <img src="./images/handshake.svg" alt="Admin">
                 <h3>Trusted Partnerships</h3>
                 <p>We foster trusted relationships between startups and investors, ensuring mutual benefit and success.</p>
-            </div></a>
-
-            <a href="./signup.html"><div class="grid-item">
+            </div>
+            <div class="box">
                 <img src="./images/guidance.svg" alt="Investor">
                 <h3>Expert Guidance</h3>
                 <p>Gain access to expert advice and resources to help you navigate the startup ecosystem effectively.</p>
-            </div></a>
-
+            </div>
         </div>
     </section>
 
