--- a/about_us.html
+++ b/about_us.html
@@ -27,7 +27,8 @@
             <li><a href="./index.html"><i class="bi bi-house-fill"></i> Home</a></li>
             <li><a href="./about_us.html"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
             <li><a href="./contact.html"><i class="bi bi-envelope-fill"></i> Contact</a></li>
-            <li><a id="login" href="#" class="login-btn"><i class="bi bi-box-arrow-in-right"></i> Join</a></li>
+            <li><a id="signup" href="./signup.html" class="login-btn"><i class="bi bi-box-arrow-in-right"></i> Join</a>
+            </li>
         </ul>
     </nav>
 
@@ -54,11 +55,6 @@
                 <p>Our team is composed of experienced professionals from various industries who are passionate about
                     innovation and entrepreneurship. We are dedicated to supporting startups and investors at every step
                     of their journey.</p>
-            </div>
-            <div class="box">
-                <h3>Our Values</h3>
-                <p>Integrity, innovation, and collaboration are at the core of everything we do. We believe in fostering
-                    a transparent and inclusive environment that encourages creative thinking and mutual respect.</p>
             </div>
         </div>
     </section>
