--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
             <li><a href="./index.html"><i class="bi bi-house-fill"></i> Home</a></li>
             <li><a href="./about_us.html"><i class="bi bi-info-circle-fill"></i> About Us</a></li>
             <li><a href="./contact.html"><i class="bi bi-envelope-fill"></i> Contact</a></li>
-            <li><a id="login" href="./login.html" class="login-btn"><i class="bi bi-box-arrow-in-right"></i> Login</a></li>
+            <li><a id="signup" href="./login.html" class="login-btn"><i class="bi bi-box-arrow-in-right"></i> Login</a></li>
         </ul>
     </nav>
 
