--- a/login.html
+++ b/login.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
@@ -38,8 +36,15 @@
 
     <section class="login">
         <div class="form-container">
-            <form class="login-form">
+            <div class="form-switch">
+                <button class="form-btn active" onclick="showForm('startup')">Startup</button>
+                <button class="form-btn" onclick="showForm('admin')">Admin</button>
+                <button class="form-btn" onclick="showForm('investor')">Investor</button>
+            </div>
+            <form id="loginForm" class="login-form">
                 <h2>Login</h2>
+                <input type="hidden" id="userType" name="userType" value="startup">
+                
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
 
@@ -58,6 +63,29 @@
         <p>&copy; 2024 Startup Bridge. All rights reserved.</p>
     </footer>
 
+    <script>
+        function showForm(type) {
+            document.querySelectorAll('.form-btn').forEach(btn => btn.classList.remove('active'));
+            document.querySelector(`.form-btn[onclick="showForm('${type}')"]`).classList.add('active');
+            document.getElementById('userType').value = type;
+        }
+
+        document.getElementById('loginForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const userType = document.getElementById('userType').value;
+
+            // Redirect based on user type
+            if (userType === 'startup') {
+                window.location.href = './startup.html';
+            } else if (userType === 'admin') {
+                window.location.href = './admin.html';
+            } else if (userType === 'investor') {
+                window.location.href = './investor.html';
+            } else {
+                alert('Unknown user type.');
+            }
+        });
+    </script>
 </body>
 
 </html>
