--- a/signup.html
+++ b/signup.html
@@ -52,10 +52,10 @@
                 <input type="email" id="startup-email" name="startup-email" required>
 
                 <label for="startup-password">Password</label>
-                <input type="password" id="startup-password" name="startup-password" required>
+                <input type="password" id="startup-password" name="startup-password" required minlength="8">
 
                 <label for="startup-description">Description</label>
-                <textarea id="startup-description" name="startup-description" rows="4" required></textarea>
+                <textarea id="startup-description" name="startup-description" rows="4" required minlength="50"></textarea>
 
                 <button type="submit">Sign Up</button>
                 <div id="login-container">
