--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
                 <input type="email" id="email" name="email" required>
 
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required minlength="8">
 
                 <button type="submit">Login</button>
                 <div id="signup-container">
