--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
+<!-- Online chat Integration. -->
+<script src="//code.tidio.co/qkpozlcy87jt63v6u4zxsf03ugujbgrb.js" async></script>
+
 <body>
     <nav class="navbar">
         <div class="logo">
